transport/network/src/snapshots/hopr_transport_network__observation__tests__peer_packet_stats_should_record_bidirectional_traffic.snap
---
source: transport/network/src/observation.rs
expression: snapshot
---
packetsOut: 2
packetsIn: 2
bytesOut: 3000
bytesIn: 2000
