transport/network/src/snapshots/hopr_transport_network__observation__tests__peer_packet_stats_should_record_incoming_packets.snap
---
source: transport/network/src/observation.rs
expression: snapshot
---
packetsOut: 0
packetsIn: 3
bytesOut: 0
bytesIn: 300
