transport/network/src/snapshots/hopr_transport_network__observation__tests__peer_packet_stats_should_record_outgoing_packets.snap
---
source: transport/network/src/observation.rs
expression: snapshot
---
packetsOut: 2
packetsIn: 0
bytesOut: 300
bytesIn: 0
