transport/network/src/snapshots/hopr_transport_network__observation__tests__peer_packet_stats_should_start_at_zero.snap
---
source: transport/network/src/observation.rs
expression: snapshot
---
packetsOut: 0
packetsIn: 0
bytesOut: 0
bytesIn: 0
